--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "swiper": "^6.7.5",
     "vue": "^2.6.11",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
