--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "serve": "nodemon server.js"
+    "start": "node app.js",
+    "serve": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +19,8 @@
     "mysql2": "^2.3.0",
     "path": "^0.12.7",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.3.0"
+    "sequelize-cli": "^6.3.0",
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
