--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
+    "socket.io-client": "^4.3.2",
+    "v-emoji-picker": "^2.3.3",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
     "vue-masonry-wall": "^0.3.2",
     "vue-route-middleware": "^1.0.7",
     "vue-router": "^3.2.0",
+    "vue2-perfect-scrollbar": "^1.5.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
