--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
@@ -20,7 +21,8 @@
     "path": "^0.12.7",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.3.0",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
